--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <navigation
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,7 +12,7 @@
     <!-- fragment: ListFragment -->
     <fragment
         android:id="@+id/navigation_listFragment"
-        android:name="com.mancel.yann.realestatemanager.views.fragments.ListFragment"
+        android:name="abbesolo.com.realestatemanager.fragments.RMListFragment"
         android:label="@string/navigation_list_name"
         tools:layout="@layout/fragment_list">
 
@@ -24,9 +25,9 @@
     <!-- fragment: DetailsFragment -->
     <fragment
         android:id="@+id/navigation_detailsFragment"
-        android:name="com.mancel.yann.realestatemanager.views.fragments.DetailsFragment"
+        android:name="abbesolo.com.realestatemanager.fragments.RMDetailFragment"
         android:label="@string/navigation_details_name"
-        tools:layout="@layout/fragment_details">
+        tools:layout="@layout/fragment_r_m_details">
 
         <argument
             android:name="itemId"
@@ -38,7 +39,7 @@
     <!-- fragment: LocationFragment -->
     <fragment
         android:id="@+id/navigation_locationFragment"
-        android:name="com.mancel.yann.realestatemanager.views.fragments.LocationFragment"
+        android:name="abbesolo.com.realestatemanager.fragments.RMMapFragment"
         android:label="@string/navigation_location_name"
         tools:layout="@layout/fragment_location">
 
@@ -51,14 +52,14 @@
     <!-- fragment: CreatorFragment -->
     <fragment
         android:id="@+id/navigation_creatorFragment"
-        android:name="com.mancel.yann.realestatemanager.views.fragments.CreatorFragment"
+        android:name="abbesolo.com.realestatemanager.fragments.RMCreatorFragment"
         android:label="@string/navigation_creator_name"
         tools:layout="@layout/fragment_creator"/>
 
     <!-- fragment: EditFragment -->
     <fragment
         android:id="@+id/navigation_editFragment"
-        android:name="com.mancel.yann.realestatemanager.views.fragments.EditFragment"
+        android:name="abbesolo.com.realestatemanager.fragments.RMUpdateFragment"
         android:label="@string/navigation_edit_name"
         tools:layout="@layout/fragment_edit">
 
@@ -72,7 +73,7 @@
     <!-- SearchFragment: EditFragment -->
     <fragment
         android:id="@+id/navigation_searchFragment"
-        android:name="com.mancel.yann.realestatemanager.views.fragments.SearchFragment"
+        android:name="abbesolo.com.realestatemanager.fragments.RMSearchFragment"
         android:label="@string/navigation_search_name"
         tools:layout="@layout/fragment_search" >
 
@@ -85,8 +86,15 @@
     <!-- dialog: settingsDialogFragment -->
     <dialog
         android:id="@+id/navigation_settingsDialogFragment"
-        android:name="com.mancel.yann.realestatemanager.views.dialogs.SettingsDialogFragment"
+        android:name="abbesolo.com.realestatemanager.dialogs.RMSettingsDialog"
         android:label="@string/title_settings_dialog_fragment"
+        tools:layout="@layout/dialog_fragment_settings" />
+
+    <!-- dialog: convertDialogFragment -->
+    <dialog
+        android:id="@+id/navigation_convertFragment"
+        android:name="abbesolo.com.realestatemanager.dialogs.RMConvertDialog"
+        android:label="@string/title_convert_dialog_fragment"
         tools:layout="@layout/dialog_fragment_settings" />
 
 </navigation>
