--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -6,10 +6,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:map="http://schemas.android.com/apk/res-auto"
-
+    android:id="@+id/fragment_edit"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.fragments.EditFragment">
+    tools:context=".fragments.RMUpdateFragment">
 
     <!-- NestedScrollView -->
     <androidx.core.widget.NestedScrollView
@@ -21,13 +21,26 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:visibility="gone"
+                android:id="@+id/sold"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/sold"
+                app:layout_constraintBottom_toTopOf="@id/cardview_type"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+
+
             <!-- MaterialCardView: Type -->
             <com.google.android.material.card.MaterialCardView
                 tools:visibility="gone"
                 android:id="@+id/cardview_type"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/sold"
                 app:layout_constraintBottom_toTopOf="@id/cardview_characteristics"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -432,8 +445,8 @@
                         app:layout_constraintStart_toEndOf="@id/icon_date"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:padding="@dimen/padding_normal"
-                        android:text="@string/creator_enable"
-                        android:checked="true"/>
+                        android:text="@string/is_sold"
+                        android:checked="false"/>
 
                     <!-- TextInputLayout: Effective date -->
                     <com.google.android.material.textfield.TextInputLayout
@@ -456,7 +469,7 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:hint="@string/hint_date"
+                            android:hint="@string/hint_date_sold"
                             android:inputType="date"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
