--- a/app/src/main/res/layout/fragment_r_m_details.xml
+++ b/app/src/main/res/layout/fragment_r_m_details.xml
@@ -21,6 +21,48 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <androidx.appcompat.widget.AppCompatImageView
+
+                android:id="@+id/sold"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:src="@drawable/sold"/>
+
+            <!-- MaterialTextView: Title user -->
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/user"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:layout_marginStart="@dimen/margin_normal"
+                android:layout_marginEnd="@dimen/margin_normal"
+                app:layout_constraintTop_toTopOf="@+id/sold"
+                app:layout_constraintBottom_toTopOf="@+id/title_media"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                android:text="@string/username"
+                style="@style/TextAppearance.MaterialComponents.Headline6"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/fragment_detail_user_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:layout_marginStart="@dimen/margin_normal"
+                android:layout_marginEnd="@dimen/margin_normal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/user"
+                app:layout_constraintBottom_toTopOf="@id/title_media"
+                android:text="@string/prompt_username"
+                style="@style/TextViewStyle1"
+                />
+
+
             <!-- MaterialTextView: Title media -->
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/title_media"
@@ -29,7 +71,7 @@
                 android:layout_marginTop="@dimen/margin_normal"
                 android:layout_marginStart="@dimen/margin_normal"
                 android:layout_marginEnd="@dimen/margin_normal"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/fragment_detail_user_name"
                 app:layout_constraintBottom_toTopOf="@id/fragment_details_RecyclerView_photo"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
