--- a/app/src/main/res/menu-w600dp/activity_main_menu_drawer.xml
+++ b/app/src/main/res/menu-w600dp/activity_main_menu_drawer.xml
@@ -10,6 +10,11 @@
         android:checkableBehavior="single">
 
         <item
+            android:id="@id/navigation_listFragment"
+            android:icon="@drawable/ic_list"
+            android:title="@string/menu_drawer_real_estates"/>
+
+        <item
             android:id="@id/navigation_settingsDialogFragment"
             android:icon="@drawable/ic_settings"
             android:title="@string/menu_drawer_settings"/>
@@ -18,6 +23,11 @@
             android:id="@id/navigation_searchFragment"
             android:icon="@drawable/ic_filter_list"
             android:title="@string/menu_drawer_search"/>
+
+        <item
+            android:id="@id/navigation_convertFragment"
+            android:icon="@drawable/ic_baseline_arrow_forward_24"
+            android:title="@string/menu_drawer_convert"/>
 
     </group>
 
