--- a/app/src/main/res/menu/activity_main_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_main_menu_drawer.xml
@@ -3,7 +3,6 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-
     tools:showIn="navigation_view">
 
     <group
@@ -23,6 +22,11 @@
             android:id="@id/navigation_searchFragment"
             android:icon="@drawable/ic_filter_list"
             android:title="@string/menu_drawer_search"/>
+
+        <item
+            android:id="@id/navigation_convertFragment"
+            android:icon="@drawable/ic_baseline_arrow_forward_24"
+            android:title="@string/menu_drawer_convert"/>
 
     </group>
 
